--- a/E_commerce/templates/shop_grid.html
+++ b/E_commerce/templates/shop_grid.html
@@ -1,6 +1,6 @@
 ﻿{% extends 'base.html' %}
 {% load static %}
-{%block content%}
+{% block content %}
 <!doctype html>
 <html lang="en">
 
@@ -9,7 +9,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <!--favicon-->
-	<link rel="icon" href="{% static 'assets/images/logo1.webp' %}" type="image/webp">
+	<link rel="icon" href="assets/images/logo1.webp" type="image/webp">
 
   <!-- CSS files -->
   <link href="{% static 'assets/css/bootstrap.min.css' %}" rel="stylesheet">
@@ -193,7 +193,7 @@
 
    <!--start breadcrumb-->
    <div class="py-4 border-bottom">
-    <div class="container-fluid">
+    <div class="container">
       <nav aria-label="breadcrumb">
         <ol class="breadcrumb mb-0"> 
           <li class="breadcrumb-item"><a href="javascript:;">Home</a></li>
@@ -207,12 +207,12 @@
 
 
    <!--start product grid-->
-   <section class="py-4">
+   <section class="section-padding">
     <h5 class="mb-0 fw-bold d-none">Product Grid</h5>
-    <div class="container-fluid">
+    <div class="container">
       <div class="btn btn-dark btn-ecomm d-xl-none position-fixed top-50 start-0 translate-middle-y" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbarFilter"><span><i class="bi bi-funnel me-1"></i> Filters</span></div>
        <div class="row">
-          <div class="col-12 col-xl-2 filter-column">
+          <div class="col-12 col-xl-3 filter-column">
               <nav class="navbar navbar-expand-xl flex-wrap p-0">
                 <div class="offcanvas offcanvas-start" tabindex="-1" id="offcanvasNavbarFilter" aria-labelledby="offcanvasNavbarFilterLabel">
                   <div class="offcanvas-header">
@@ -544,31 +544,31 @@
                 </div>
             </nav>
           </div>
-          <div class="col-12 col-xl-10">
+          <div class="col-12 col-xl-9">
             <div class="shop-right-sidebar">
               <div class="card rounded-0">
                 <div class="card-body p-2">
                   <div class="d-flex align-items-center justify-content-between bg-light p-2">
                      <div class="product-count">657 Items Found</div>
                      <div class="view-type hstack gap-2 d-none d-xl-flex">
-                      <p class="mb-0">Grid</p>
-                      <div>
-                        <a href="shop-grid.html" class="grid-type-3 d-flex gap-1">
+                        <p class="mb-0">Grid</p>
+                        <div>
+                          <a href="shop-grid.html" class="grid-type-3 d-flex gap-1 active">
+                            <span></span>
+                            <span></span>
+                            <span></span>
+                          </a>
+                        </div>
+                        <div>
+                          <a href="{% url 'shop_grid_type_5' %}" class="grid-type-3 d-flex gap-1">
                           <span></span>
                           <span></span>
                           <span></span>
-                        </a>
-                      </div>
-                      <div>
-                        <a href="shop-grid-type-5.html" class="grid-type-3 d-flex gap-1 active">
-                        <span></span>
-                        <span></span>
-                        <span></span>
-                        <span></span>
-                        <span></span>
-                        </a>
-                      </div>
-                   </div>
+                          <span></span>
+                          <span></span>
+                          </a>
+                        </div>
+                     </div>
                      <form>
                       <div class="input-group">
                         <span class="input-group-text bg-transparent rounded-0 border-0">Sort By</span>
@@ -587,7 +587,7 @@
               </div>
 
               <div class="product-grid mt-4">
-                <div class="row row-cols-1 row-cols-md-2 row-cols-lg-5 g-4">
+                <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-4">
                   <div class="col">
                     <div class="card border shadow-none">
                       <div class="position-relative overflow-hidden">
@@ -597,7 +597,7 @@
                           <a href="javascript:;"><i class="bi bi-zoom-in"></i></a>
                         </div>
                         <a href="javascript:;">
-                          <img src="assets/images/featured-products/01.webp" class="card-img-top" alt="...">
+                          <img src="assets/images/best-sellar/02.webp" class="card-img-top" alt="...">
                         </a>
                       </div>
                       <div class="card-body border-top">
@@ -620,7 +620,7 @@
                           <a href="javascript:;"><i class="bi bi-zoom-in"></i></a>
                         </div>
                         <a href="javascript:;">
-                          <img src="assets/images/featured-products/02.webp" class="card-img-top" alt="...">
+                          <img src="assets/images/trending-product/01.webp" class="card-img-top" alt="...">
                         </a>
                       </div>
                       <div class="card-body border-top">
@@ -666,7 +666,7 @@
                           <a href="javascript:;"><i class="bi bi-zoom-in"></i></a>
                         </div>
                         <a href="javascript:;">
-                          <img src="assets/images/featured-products/04.webp" class="card-img-top" alt="...">
+                          <img src="assets/images/special-offer/03.webp" class="card-img-top" alt="...">
                         </a>
                       </div>
                       <div class="card-body border-top">
@@ -712,7 +712,7 @@
                           <a href="javascript:;"><i class="bi bi-zoom-in"></i></a>
                         </div>
                         <a href="javascript:;">
-                          <img src="assets/images/featured-products/06.webp" class="card-img-top" alt="...">
+                          <img src="assets/images/best-sellar/03.webp" class="card-img-top" alt="...">
                         </a>
                       </div>
                       <div class="card-body border-top">
@@ -735,7 +735,7 @@
                           <a href="javascript:;"><i class="bi bi-zoom-in"></i></a>
                         </div>
                         <a href="javascript:;">
-                          <img src="assets/images/featured-products/07.webp" class="card-img-top" alt="...">
+                          <img src="assets/images/trending-product/04.webp" class="card-img-top" alt="...">
                         </a>
                       </div>
                       <div class="card-body border-top">
@@ -804,7 +804,7 @@
                           <a href="javascript:;"><i class="bi bi-zoom-in"></i></a>
                         </div>
                         <a href="javascript:;">
-                          <img src="assets/images/new-arrival/02.webp" class="card-img-top" alt="...">
+                          <img src="assets/images/special-offer/02.webp" class="card-img-top" alt="...">
                         </a>
                       </div>
                       <div class="card-body border-top">
@@ -850,7 +850,7 @@
                           <a href="javascript:;"><i class="bi bi-zoom-in"></i></a>
                         </div>
                         <a href="javascript:;">
-                          <img src="assets/images/new-arrival/04.webp" class="card-img-top" alt="...">
+                          <img src="assets/images/trending-product/03.webp" class="card-img-top" alt="...">
                         </a>
                       </div>
                       <div class="card-body border-top">
@@ -933,37 +933,32 @@
                       </div>
                     </div>
                   </div>
-                  <div class="col">
-                    <div class="card border shadow-none">
-                      <div class="position-relative overflow-hidden">
-                        <div class="product-options d-flex align-items-center justify-content-center gap-2 mx-auto position-absolute bottom-0 start-0 end-0">
-                          <a href="javascript:;"><i class="bi bi-heart"></i></a>
-                          <a href="javascript:;"><i class="bi bi-basket3"></i></a>
-                          <a href="javascript:;"><i class="bi bi-zoom-in"></i></a>
-                        </div>
-                        <a href="javascript:;">
-                          <img src="assets/images/best-sellar/01.webp" class="card-img-top" alt="...">
-                        </a>
-                      </div>
-                      <div class="card-body border-top">
-                        <h6 class="mb-0 fw-bold product-short-title">Syndrona</h6>
-                        <p class="mb-0 product-short-name">Color Printed Kurta</p>
-                        <div class="product-price d-flex align-items-center gap-2 mt-2">
-                          <div class="h6 fw-bold">$458</div>
-                          <div class="h6 fw-light text-muted text-decoration-line-through">$2089</div>
-                          <div class="h6 fw-bold text-danger">(70% off)</div>
-                        </div>
-                      </div>
-                    </div>
-                  </div>
-
-
               </div><!--end row-->
+            </div>
+
+            <hr class="my-4">
+
+            <div class="product-pagination">
+              <nav>
+                <ul class="pagination justify-content-center">
+                  <li class="page-item disabled">
+                    <a class="page-link">Previous</a>
+                  </li>
+                  <li class="page-item active"><a class="page-link" href="javascript:;">1</a></li>
+                  <li class="page-item"><a class="page-link" href="javascript:;">2</a></li>
+                  <li class="page-item"><a class="page-link" href="javascript:;">3</a></li>
+                  <li class="page-item">
+                    <a class="page-link" href="javascript:;">Next</a>
+                  </li>
+                </ul>
+              </nav>
             </div>
 
             </div>
           </div>
        </div><!--end row-->
+
+       
     </div>
   </section>
    <!--start product details-->
@@ -1048,7 +1043,7 @@
         <div class="d-flex align-items-center gap-3">
           <div class="bottom-product-img">
             <a href="product-details.html">
-              <img src="{% static 'assets/images/new-arrival/01.webp' %}" width="60" alt="">
+              <img src="assets/images/new-arrival/01.webp" width="60" alt="">
             </a>
           </div>
           <div class="">
@@ -1064,7 +1059,7 @@
         <div class="d-flex align-items-center gap-3">
           <div class="bottom-product-img">
             <a href="product-details.html">
-              <img src="{% static 'assets/images/new-arrival/02.webp' %}" width="60" alt="">
+              <img src="assets/images/new-arrival/02.webp" width="60" alt="">
             </a>
           </div>
           <div class="">
@@ -1080,7 +1075,7 @@
         <div class="d-flex align-items-center gap-3">
           <div class="bottom-product-img">
             <a href="product-details.html">
-              <img src="{% static 'assets/images/new-arrival/03.webp' %}" width="60" alt="">
+              <img src="assets/images/new-arrival/03.webp" width="60" alt="">
             </a>
           </div>
           <div class="">
@@ -1096,7 +1091,7 @@
         <div class="d-flex align-items-center gap-3">
           <div class="bottom-product-img">
             <a href="product-details.html">
-              <img src="{% static 'assets/images/new-arrival/04.webp' %}" width="60" alt="">
+              <img src="assets/images/new-arrival/04.webp" width="60" alt="">
             </a>
           </div>
           <div class="">
@@ -1112,7 +1107,7 @@
         <div class="d-flex align-items-center gap-3">
           <div class="bottom-product-img">
             <a href="product-details.html">
-              <img src="{% static 'assets/images/new-arrival/05.webp' %}" width="60" alt="">
+              <img src="assets/images/new-arrival/05.webp" width="60" alt="">
             </a>
           </div>
           <div class="">
@@ -1128,7 +1123,7 @@
         <div class="d-flex align-items-center gap-3">
           <div class="bottom-product-img">
             <a href="product-details.html">
-              <img src="{% static 'assets/images/new-arrival/06.webp' %}" width="60" alt="">
+              <img src="assets/images/new-arrival/06.webp" width="60" alt="">
             </a>
           </div>
           <div class="">
@@ -1144,7 +1139,7 @@
         <div class="d-flex align-items-center gap-3">
           <div class="bottom-product-img">
             <a href="product-details.html">
-              <img src="{% static 'assets/images/new-arrival/07.webp' %}" width="60" alt="">
+              <img src="assets/images/new-arrival/07.webp" width="60" alt="">
             </a>
           </div>
           <div class="">
@@ -1160,7 +1155,7 @@
         <div class="d-flex align-items-center gap-3">
           <div class="bottom-product-img">
             <a href="product-details.html">
-              <img src="{% static 'assets/images/new-arrival/08.webp' %}" width="60" alt="">
+              <img src="assets/images/new-arrival/08.webp" width="60" alt="">
             </a>
           </div>
           <div class="">
@@ -1176,7 +1171,7 @@
         <div class="d-flex align-items-center gap-3">
           <div class="bottom-product-img">
             <a href="product-details.html">
-              <img src="{% static 'assets/images/new-arrival/09.webp' %}" width="60" alt="">
+              <img src="assets/images/new-arrival/09.webp" width="60" alt="">
             </a>
           </div>
           <div class="">
@@ -1192,7 +1187,7 @@
         <div class="d-flex align-items-center gap-3">
           <div class="bottom-product-img">
             <a href="product-details.html">
-              <img src="{% static 'assets/images/new-arrival/10.webp' %}" width="60" alt="">
+              <img src="assets/images/new-arrival/10.webp" width="60" alt="">
             </a>
           </div>
           <div class="">
