Chore: Added shop_grid && fixed all static files

--- a/E_commerce/templates/cart.html
+++ b/E_commerce/templates/cart.html
@@ -1,5 +1,6 @@
 ﻿{% extends 'base.html' %}
 {% load static %}
+{% block content %}
 <!doctype html>
 <html lang="en">
 
@@ -837,3 +838,4 @@
 </body>
 
 </html>
+{% endblock %}
