--- a/E_commerce/templates/payment_method.html
+++ b/E_commerce/templates/payment_method.html
@@ -1,5 +1,6 @@
 ﻿{% extends 'base.html' %}
 {%load static %}
+{% block content %}
 <!doctype html>
 <html lang="en">
 
@@ -38,22 +39,30 @@
 <!--end loader-->
 
   <!--start top header-->
+  <div class="loader-wrapper">
+    <div class="d-flex justify-content-center align-items-center position-absolute top-50 start-50 translate-middle">
+      <div class="spinner-border text-dark" role="status">
+        <span class="visually-hidden">Loading...</span>
+      </div>
+    </div>
+  </div>
+ <!--start top header-->
   <header class="top-header">
     <nav class="navbar navbar-expand-xl w-100 navbar-dark container gap-3">
-      <a class="navbar-brand d-none d-xl-inline" href="index.html"><img src="assets/images/logo1.webp" class="logo-img" alt=""></a>
+      <a class="navbar-brand d-none d-xl-inline" href="{%url 'index' %}"><img src="{% static 'assets/images/logo1.webp' %}" class="logo-img" alt=""></a>
       <a class="mobile-menu-btn d-inline d-xl-none" href="javascript:;" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar">
         <i class="bi bi-list"></i>
       </a>
       <div class="offcanvas offcanvas-start" tabindex="-1" id="offcanvasNavbar">
         <div class="offcanvas-header">
-          <div class="offcanvas-logo"><img src="assets/images/logo.webp" class="logo-img" alt="">
+          <div class="offcanvas-logo"><a href="{%url 'index' %}"><img src="{% static 'assets/images/logo1.png' %}" class="logo-img" alt=""></a>
           </div>
           <button type="button" class="btn-close text-reset" data-bs-dismiss="offcanvas" aria-label="Close"></button>
         </div>
         <div class="offcanvas-body primary-menu">
           <ul class="navbar-nav justify-content-start flex-grow-1 gap-1">
             <li class="nav-item">
-              <a class="nav-link" href="index.html">Home</a>
+              <a class="nav-link" href="{%url 'index' %}">Home</a>
             </li>
             <li class="nav-item dropdown">
               <a class="nav-link dropdown-toggle dropdown-toggle-nocaret" href="tv-shows.html" data-bs-toggle="dropdown">
@@ -107,7 +116,7 @@
                   <!-- end col-3 -->
                   <div class="col-12 col-xl-4 d-none d-xl-block">
                     <div class="pramotion-banner1">
-                      <img src="assets/images/menu-img.webp" class="img-fluid" alt="">
+                      <img src="{%static 'assets/images/menu-img.webp' %}" class="img-fluid" alt="">
                     </div>
                   </div>
                   <!-- end col-3 -->
@@ -120,38 +129,48 @@
                 Shop
               </a>
               <ul class="dropdown-menu">
-                <li><a class="dropdown-item" href="cart.html">Shop Cart</a></li>
-                <li><a class="dropdown-item" href="wishlist.html">Wishlist</a></li>
-                <li><a class="dropdown-item" href="product-details.html">Product Details</a></li>
-                <li><a class="dropdown-item" href="payment-method.html">Payment Method</a></li>
-                <li><a class="dropdown-item" href="billing-details.html">Billing Details</a></li>
-                <li><a class="dropdown-item" href="address.html">Addresses</a></li>
-                <li><a class="dropdown-item" href="shop-grid.html">Shop Grid</a></li>
-                <li><a class="dropdown-item" href="shop-grid-type-4.html">Shop Grid 4</a></li>
-                <li><a class="dropdown-item" href="shop-grid-type-5.html">Shop Grid 5</a></li>
-                <li><a class="dropdown-item" href="search.html">Search</a></li>
+                <li><a class="dropdown-item" href="{%url 'cart' %}">Shop Cart</a></li>
+                <li><a class="dropdown-item" href="{%url 'wishlist' %}">Wishlist</a></li>
+                <li><a class="dropdown-item" href="{%url 'payment_method' %}">Payment Method</a></li>
+                <li><a class="dropdown-item" href="{%url 'billing_details' %}">Billing Details</a></li>
+                <li><a class="dropdown-item" href="{%url 'address' %}">Addresses</a></li>
+                <li><a class="dropdown-item" href="{%url 'shop_grid' %}">Shop Grid</a></li>
+                <li><a class="dropdown-item" href="{%url 'shop_grid_type_4' %}">Shop Grid 4</a></li>
+                <li><a class="dropdown-item" href="{%url 'shop_grid_type_5'%}">Shop Grid 5</a></li>
+                <li><a class="dropdown-item" href="{%url 'search' %}">Search</a></li>
               </ul>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="about-us.html">About</a>
+              <a class="nav-link" href="{%url 'aboutus' %}">About</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="contact-us.html">Contact</a>
+              <a class="nav-link" href="{%url 'contact_us' %}">Contact</a>
             </li>
             <li class="nav-item dropdown">
               <a class="nav-link dropdown-toggle dropdown-toggle-nocaret" href="javascript:;" data-bs-toggle="dropdown">
                 Account
               </a>
               <ul class="dropdown-menu">
-                <li><a class="dropdown-item" href="account-dashboard.html">Dashboard</a></li>
-                <li><a class="dropdown-item" href="account-orders.html">My Orders</a></li>
-                <li><a class="dropdown-item" href="account-profile.html">My Profile</a></li>
-                <li><a class="dropdown-item" href="account-edit-profile.html">Edit Profile</a></li>
-                <li><a class="dropdown-item" href="account-saved-address.html">Addresses</a></li>
-                <li><hr class="dropdown-divider"></li>
-                <li><a class="dropdown-item" href="authentication-login.html">Login</a></li>
-                <li><a class="dropdown-item" href="authentication-register.html">Register</a></li>
-                <li><a class="dropdown-item" href="authentication-reset-password.html">Password</a></li>
+                <li><a class="dropdown-item" href="{%url 'account_dashboard' %}">Dashboard</a></li>
+                <li><a class="dropdown-item" href="{%url 'account_orders' %}">My Orders</a></li>
+                {% if  user.profile.pk %}
+                  <li><a class="dropdown-item" href="{%url 'account_profile'%}">My Profile</a></li>
+                  <li><a class="dropdown-item" href="{%url 'account_edit' user.profile.pk%}">Edit Profile</a></li>
+                {% endif %}
+                {%if user.is_authenticated and not user.profile.pk %}
+                  <li><a class="dropdown-item" href="{%url 'create_profile'%}">Create Profile</a></li>
+                {% endif %}
+                <li><a class="dropdown-item" href="{%url 'address' %}">Addresses</a></li>
+                <li>
+                  <hr class="dropdown-divider">
+                </li>
+                {% if user.is_authenticated %}
+                <li><a class="dropdown-item" href="{%url 'logout_user' %}">Logout</a></li>
+                {% else %}
+                <li><a class="dropdown-item" href="{%url 'authentication_login' %}">Login</a></li>
+                <li><a class="dropdown-item" href="{%url 'signup_user' %}">Register</a></li>
+                {% endif %}
+                <li><a class="dropdown-item" href="{%url 'authentication_reset_password'%}">Password</a></li>
               </ul>
             </li>
           </ul>
@@ -166,10 +185,10 @@
           </a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="search.html"><i class="bi bi-search"></i></a>
+          <a class="nav-link" href="{%url 'search' %}"><i class="bi bi-search"></i></a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="wishlist.html"><i class="bi bi-suit-heart"></i></a>
+          <a class="nav-link" href="{%url 'wishlist' %}"><i class="bi bi-suit-heart"></i></a>
         </li>
         <li class="nav-item" data-bs-toggle="offcanvas" data-bs-target="#offcanvasRight">
           <a class="nav-link position-relative" href="javascript:;">
@@ -177,9 +196,15 @@
             <i class="bi bi-basket2"></i>
           </a>
         </li>
-        <li class="nav-item">
-          <a class="nav-link" href="account-dashboard.html"><i class="bi bi-person-circle"></i></a>
+        {% if user.is_authenticated %}
+          <li class="nav-item">
+            <a class="nav-link" href="{%url 'account_dashboard'%}"><i class="bi bi-person-circle"></i></a>
+          </li>
+        {% else %}
+        <li class="nav-item ml-3 btn-xs">
+          <a class="nav-link btn btn-outline-info buttons " href="{%url 'authentication_login' %}">Login</a>
         </li>
+        {% endif %}
       </ul>
     </nav>
   </header>
@@ -601,3 +626,4 @@
 </body>
 
 </html>
+{% endblock %}
