--- a/E_commerce/templates/authentication_register.html
+++ b/E_commerce/templates/authentication_register.html
@@ -49,16 +49,25 @@
                 </div>
                 <form action="" method="POST">
                     {% csrf_token %}
-                    {% for message in messages %}
-                    <p class="text-center"><strong>{{message}}</strong></p>
+                    {% if form.errors %}
+                    <p>Invalid</p>
+                    {% for error in form.errors %}
+                    <p class="text-center"><strong>{{error}}</strong></p>
                     {% endfor %}
+                    {% endif %}
                     <div class="col-12">
                       <label for="exampleEmail" class="form-label">Email</label>
                       <input type="email" class="form-control rounded-0" name="email" id="exampleEmail" Required>
+                      {% for err in form.email.errors %}
+                        {{err}}
+                      {% endfor %}
                     </div>
                     <div class="col-12">
                       <label for="examplePassword" class="form-label">Password</label>
                       <input type="password" class="form-control rounded-0" name="password1" id="examplePassword" Required>
+                      {% for err in password1.errors%}
+                        {{err}}
+                      {% endfor %}
                     </div>
                     <div class="col-12">
                       <label for="examplePassword" class="form-label">Confirm Password</label>
